--- a/style.css
+++ b/style.css
@@ -1,15 +1,99 @@
-/* #btntshirt {
+ /* #btntshirt {
     position: absolute;
     bottom: 2%;
     left: 25%;
-} */
-/* #btnpolo {
+}  */
+ #btnpolo {
     position: absolute;
-    bottom: -3%;
+    bottom: 1%;
     left: 30%;
 }
-#btnls {
+ #btntopi {
     position: absolute;
-    bottom: -2%;
+    bottom: 1%;
     left: 30%;
-} */
+} 
+#tshirtcard {
+    width: 90%;
+    height: 100%;
+}
+#polocard {
+    width: 90%;
+    height: 100%;
+}
+#lscard {
+    width: 90%;
+    height: 100%;
+}
+#longcard {
+    width: 90%;
+    height: 100%;
+}
+#hdcard {
+    width: 90%;
+    height: 100%;
+}
+#crewcard {
+    width: 90%;
+    height: 100%;
+}
+#topicard {
+    width: 90%;
+    height: 100%;
+}
+#totebagcard {
+    width: 90%;
+    height: 100%;
+}
+
+@media screen and (max-width: 1200px) {
+    #btnpolo {
+        position: absolute;
+        bottom: 1%;
+        left: 15%;
+    }
+     #btntopi {
+        position: absolute;
+        bottom: 1%;
+        left: 15%;
+    } 
+}
+
+@media screen and (max-width: 760px) {
+    #btnpolo {
+        position: absolute;
+        bottom: 1%;
+        left: 5%;
+    }
+     #btntopi {
+        position: absolute;
+        bottom: 1%;
+        left: 5%;
+    } 
+
+
+    #tshirtcard {
+        width: 100%;
+    }
+    #polocard {
+        width: 100%;
+    }
+    #lscard {
+        width: 100%;
+    }
+    #longcard {
+        width: 100%;
+    }
+    #hdcard {
+        width: 100%;
+    }
+    #crewtcard {
+        width: 100%;
+    }
+    #topicard {
+        width: 100%;
+    }
+    #totebagcard {
+        width: 100%;
+    }
+}
