--- a/fitur_desain/style.css
+++ b/fitur_desain/style.css
@@ -1061,7 +1061,7 @@ body {
   height: 100%;
 /*  background-color: sandybrown;*/
 }
-#load1.load {
+#load.load {
 /* border: 1px solid yellow;*/
   position: absolute;
   width: 100%;
@@ -1122,7 +1122,7 @@ body {
 
 .button {
   position: absolute;
-  top: 1%;
+  top: 83%;
   left: 3%;
   width: 30%;
   height: 5%;
@@ -2337,7 +2337,7 @@ body {
   height: 100%;
 /*  background-color: sandybrown;*/
 }
-#load1.load {
+#load.load {
 /* border: 1px solid yellow;*/
   position: absolute;
   width: 100%;
