--- a/fitur_desain/style.css
+++ b/fitur_desain/style.css
@@ -744,6 +744,7 @@ body {
   left:2.5%;
   position: absolute;
   background-color: white;
+  background-image: linear-gradient(to bottom right, white, skyblue);
   overflow: hidden;
 }
 #order {
@@ -2019,7 +2020,6 @@ body {
   top:0.5%;
   left:2.5%;
   position: absolute;
-  background-color: white;
   overflow: hidden;
 }
 #order {
