--- a/fitur_desain/style.css
+++ b/fitur_desain/style.css
@@ -744,7 +744,7 @@ body {
   left:2.5%;
   position: absolute;
   background-color: white;
-  background-image: linear-gradient(to bottom right, white, skyblue);
+  background-image: radial-gradient(white, skyblue);
   overflow: hidden;
 }
 #order {
