--- a/user_fitur/style.css
+++ b/user_fitur/style.css
@@ -1032,6 +1032,48 @@ body {
   border: 1px solid #ccc;
   background-color: white;
 }
+#contenerukuran6 {
+  position: absolute;
+  bottom: 6%;
+  right: 2%;
+  width: 95%;
+  height: 4%;
+  border-radius: 10px;
+  border: 1px solid #ccc;
+  background-color: white;
+}
+
+#contenerputar6 {
+  position: absolute;
+  bottom: 1%;
+  right: 2%;
+  width: 95%;
+  height: 4%;
+  border-radius: 10px;
+  border: 1px solid #ccc;
+  background-color: white;
+}
+#contenerukuran7 {
+  position: absolute;
+  bottom: 6%;
+  right: 2%;
+  width: 95%;
+  height: 4%;
+  border-radius: 10px;
+  border: 1px solid #ccc;
+  background-color: white;
+}
+
+#contenerputar7 {
+  position: absolute;
+  bottom: 1%;
+  right: 2%;
+  width: 95%;
+  height: 4%;
+  border-radius: 10px;
+  border: 1px solid #ccc;
+  background-color: white;
+}
 .load {
 /*  border: 1px solid red;*/
   position: absolute;
@@ -1044,7 +1086,7 @@ body {
   position: absolute;
   width: 100%;
   height: 100%;
-  z-index: 5;
+  z-index: 7;
 /*  background-color: sandybrown;*/
 }
 #load2.load {
@@ -1052,7 +1094,7 @@ body {
   position: absolute;
   width: 100%;
   height: 100%;
-  z-index: 4;
+  z-index: 6;
 /*  background-color: sandybrown;*/
 }
 #load3.load {
@@ -1060,7 +1102,7 @@ body {
   position: absolute;
   width: 100%;
   height: 100%;
-  z-index: 3;
+  z-index: 5;
 /*  background-color: sandybrown;*/
 }
 #load4.load {
@@ -1068,7 +1110,7 @@ body {
   position: absolute;
   width: 100%;
   height: 100%;
-  z-index: 2;
+  z-index: 4;
 /*  background-color: sandybrown;*/
 }
 #load5.load {
@@ -1076,9 +1118,25 @@ body {
   position: absolute;
   width: 100%;
   height: 100%;
-  z-index: 1;
+  z-index: 3;
   /*background-color: sandybrown;*/
 }
+#load6.load {
+  /* border: 1px solid green;*/
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+    /*background-color: sandybrown;*/
+  }
+ #load7.load {
+    /* border: 1px solid green;*/
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      z-index: 1;
+      /*background-color: sandybrown;*/
+    }
 #drag-area img {
   width: 100%;
   height: 100%;
@@ -1188,6 +1246,42 @@ body {
   left: 16%;
   color: white;
 }
+.button6 {
+  position: absolute;
+  top: 83%;
+  left: 3%;
+  width: 30%;
+  height: 5%;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  text-decoration: none;
+  cursor: pointer;
+  background: #082988;
+}
+#upload6 {
+  position: absolute;
+  top: 20%;
+  left: 16%;
+  color: white;
+}
+.button7 {
+  position: absolute;
+  top: 83%;
+  left: 3%;
+  width: 30%;
+  height: 5%;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  text-decoration: none;
+  cursor: pointer;
+  background: #082988;
+}
+#upload7 {
+  position: absolute;
+  top: 20%;
+  left: 16%;
+  color: white;
+}
 .slider .filter-size{
   position: absolute;
   bottom: 5%;
@@ -1286,7 +1380,38 @@ body {
    height: 5px;
    accent-color: yellow;
  }
-
+ .slider #input-size6{
+  position: absolute;
+  bottom: 30%;
+  left: 20%;
+  width: 75%;
+  height: 5px;
+  accent-color: yellow;
+}
+.slider #input-rotate6{
+  position: absolute;
+  bottom: 30%;
+  left: 20%;
+  width: 75%;
+  height: 5px;
+  accent-color: yellow;
+}
+.slider #input-size7{
+  position: absolute;
+  bottom: 30%;
+  left: 20%;
+  width: 75%;
+  height: 5px;
+  accent-color: yellow;
+}
+.slider #input-rotate7{
+  position: absolute;
+  bottom: 30%;
+  left: 20%;
+  width: 75%;
+  height: 5px;
+  accent-color: yellow;
+}
 
 @media screen and (max-width: 1200px) {
 
@@ -2270,6 +2395,48 @@ body {
   border: 1px solid #ccc;
   background-color: white;
 }
+#contenerukuran6 {
+  position: absolute;
+  bottom: 10%;
+  right: 2%;
+  width: 95%;
+  height: 6%;
+  border-radius: 10px;
+  border: 1px solid #ccc;
+  background-color: white;
+}
+
+#contenerputar6 {
+  position: absolute;
+  bottom: 2%;
+  right: 2%;
+  width: 95%;
+  height: 6%;
+  border-radius: 10px;
+  border: 1px solid #ccc;
+  background-color: white;
+}
+#contenerukuran7 {
+  position: absolute;
+  bottom: 10%;
+  right: 2%;
+  width: 95%;
+  height: 6%;
+  border-radius: 10px;
+  border: 1px solid #ccc;
+  background-color: white;
+}
+
+#contenerputar7 {
+  position: absolute;
+  bottom: 2%;
+  right: 2%;
+  width: 95%;
+  height: 6%;
+  border-radius: 10px;
+  border: 1px solid #ccc;
+  background-color: white;
+}
 .load {
 /*  border: 1px solid red;*/
   position: absolute;
@@ -2317,6 +2484,22 @@ body {
   z-index: 1;
   /*background-color: sandybrown;*/
 }
+#load6.load {
+  /* border: 1px solid green;*/
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    /*background-color: sandybrown;*/
+  }
+  #load7.load {
+    /* border: 1px solid green;*/
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      z-index: 1;
+      /*background-color: sandybrown;*/
+    }
 #drag-area img {
   width: 100%;
   height: 100%;
@@ -2431,6 +2614,44 @@ body {
   color: white;
   font-size: 90%;
 }
+.button6 {
+  position: absolute;
+  top: 77%;
+  left: 3%;
+  width: 35%;
+  height: 5%;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  text-decoration: none;
+  cursor: pointer;
+  background: #082988;
+}
+#upload6 {
+  position: absolute;
+  top: 20%;
+  left: 5%;
+  color: white;
+  font-size: 90%;
+}
+.button7 {
+  position: absolute;
+  top: 77%;
+  left: 3%;
+  width: 35%;
+  height: 5%;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  text-decoration: none;
+  cursor: pointer;
+  background: #082988;
+}
+#upload7 {
+  position: absolute;
+  top: 20%;
+  left: 5%;
+  color: white;
+  font-size: 90%;
+}
 .slider .filter-size{
   position: absolute;
   bottom: 15%;
@@ -2529,6 +2750,38 @@ body {
    height: 5px;
    accent-color: yellow;
  }
+ .slider #input-size6{
+  position: absolute;
+  bottom: 40%;
+  left: 30%;
+   width: 65%;
+  height: 5px;
+  accent-color: yellow;
+}
+.slider #input-rotate6{
+  position: absolute;
+  bottom:40%;
+  left: 30%;
+   width: 65%;
+  height: 5px;
+  accent-color: yellow;
+}
+.slider #input-size7{
+  position: absolute;
+  bottom: 40%;
+  left: 30%;
+   width: 65%;
+  height: 5px;
+  accent-color: yellow;
+}
+.slider #input-rotate7{
+  position: absolute;
+  bottom:40%;
+  left: 30%;
+   width: 65%;
+  height: 5px;
+  accent-color: yellow;
+}
 
 }
 
@@ -3367,6 +3620,40 @@ body {
  top: 10%;
  left: 10%;
 }
+.wraper_kaos .button6{
+  position: absolute;
+  top: 82%;
+  left: 3%;
+  width: 40%;
+  height: 7%;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  text-decoration: none;
+  background-color: #082988;
+  cursor: pointer;
+}
+#upload6 {
+ position: absolute;
+ top: 10%;
+ left: 10%;
+}
+.wraper_kaos .button7{
+  position: absolute;
+  top: 82%;
+  left: 3%;
+  width: 40%;
+  height: 7%;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  text-decoration: none;
+  background-color: #082988;
+  cursor: pointer;
+}
+#upload7 {
+ position: absolute;
+ top: 10%;
+ left: 10%;
+}
   #downloadtext {
   position: absolute;
   top: 10%;
@@ -3496,6 +3783,52 @@ body {
   background-color: white;
   font-size: 50%;
 }
+#contenerukuran6 {
+  position: absolute;
+  bottom: -1%;
+  right: 2%;
+  width: 95%;
+  height: 10%;
+  border-radius: 10px;
+  border: 1px solid #ccc;
+  background-color: white;
+  font-size: 50%;
+}
+
+#contenerputar6 {
+  position: absolute;
+  bottom: -13%;
+  right: 2%;
+  width: 95%;
+  height: 10%;
+  border-radius: 10px;
+  border: 1px solid #ccc;
+  background-color: white;
+  font-size: 50%;
+}
+#contenerukuran7 {
+  position: absolute;
+  bottom: -1%;
+  right: 2%;
+  width: 95%;
+  height: 10%;
+  border-radius: 10px;
+  border: 1px solid #ccc;
+  background-color: white;
+  font-size: 50%;
+}
+
+#contenerputar7 {
+  position: absolute;
+  bottom: -13%;
+  right: 2%;
+  width: 95%;
+  height: 10%;
+  border-radius: 10px;
+  border: 1px solid #ccc;
+  background-color: white;
+  font-size: 50%;
+}
 #kembali {
   position: absolute;
   top:30%;
@@ -3609,5 +3942,37 @@ body {
    height: 5px;
    accent-color: yellow;
  }
+ .slider #input-size6{
+  position: absolute;
+  bottom: 30%;
+  left: 4%;
+  width: 90%;
+  height: 5px;
+  accent-color:yellow;
+}
+.slider #input-rotate6{
+  position: absolute;
+  bottom: 30%;
+  left: 4%;
+  width: 90%;
+  height: 5px;
+  accent-color: yellow;
+}
+.slider #input-size7{
+  position: absolute;
+  bottom: 30%;
+  left: 4%;
+  width: 90%;
+  height: 5px;
+  accent-color:yellow;
+}
+.slider #input-rotate7{
+  position: absolute;
+  bottom: 30%;
+  left: 4%;
+  width: 90%;
+  height: 5px;
+  accent-color: yellow;
+}
   
 }
