--- a/fitur_edit/index.css
+++ b/fitur_edit/index.css
@@ -13,6 +13,8 @@ body {
     height: 100%;
     background-image: radial-gradient(white, skyblue);
     left: 20%;
+    display: flex;
+    justify-content: center;
 }
 .controls {
     display: inline-block;
@@ -166,7 +168,7 @@ body {
 }
 .judul {
     position: absolute;
-    right: 550px;
+    /* right: 550px; */
     top: 160px;
 }
 
@@ -178,6 +180,8 @@ body {
     top: 0%;
     background-color: #2576f7;
     left: 0%;
+    display: flex;
+    justify-content: center;
 }
 .wraper {
     position: absolute;
@@ -185,11 +189,13 @@ body {
     height: 500px;
     top: 50px;
     left: 70px;
-    /* background-color: red; */
+    background-color: red;
+    display: flex;
+    justify-content: center;
 }
 .input {
     position: absolute;
-    left: 20%;
+    /* left: 20%; */
     top: 10%;
     width: 90px;
     height: 30px;
@@ -206,7 +212,7 @@ body {
 }
 .save {
     position: absolute;
-    left: 20%;
+    /* left: 20%; */
     top: 60%;
     width: 90px;
     height: 30px;
@@ -226,7 +232,7 @@ body {
     width: 30px;
     height: 30px;
     top: 20%;
-    left: 40%;
+    /* left: 30%; */
     cursor: pointer;
     background-color: antiquewhite;
 }
@@ -236,14 +242,14 @@ body {
     height: 35px;
     border-radius: 50%;
     top: 35%;
-    left: 40%;
+    /* left: 30%; */
     cursor: pointer;
     background-color: antiquewhite;
 }
 .text {
     position: absolute;
     top: 45%;
-    left: 35%;
+    /* left: 30%; */
     cursor: pointer;
     color: antiquewhite;
 }
@@ -295,10 +301,12 @@ body {
       }
     .container1 {
         position: absolute;
-        width: 90%;
+        width: 80%;
         height: 100%;
         background-image: radial-gradient(white, skyblue);
-        left: 10%;
+        left: 20%;
+        display: flex;
+        justify-content: center;
     }
     .controls {
         display: inline-block;
@@ -415,18 +423,20 @@ body {
     }
     .judul {
         position: absolute;
-        right: 290px;
+        /* right: 290px; */
         top: 210px;
     }
     
     
     .container2 {
         position: absolute;
-        width: 10%;
+        width: 20%;
         height: 100%;
         top: 0%;
         background-color: #0e68f8;
         left: 0%;
+        display: flex;
+        justify-content: center;
     }
     .wraper {
         position: absolute;
@@ -435,12 +445,14 @@ body {
         top: 50px;
         left: 0%;
         /* background-color: red; */
+        display: flex;
+        justify-content: center;
     }
     .input {
         position: absolute;
-        left: 1%;
+        /* left: 1%; */
         top: 10%;
-        width: 95%;
+        width: 50%;
         height: 30px;
         /* left: 10%; */
         background-color: blue;
@@ -455,9 +467,9 @@ body {
     }
     .save {
         position: absolute;
-        left: 1%;
+        /* left: 1%; */
         top: 60%;
-        width: 95%;
+        width: 50%;
         height: 30px;
         /* right: 10%; */
         background-color: blue;
@@ -467,7 +479,7 @@ body {
     .savetext{
         position: absolute;
         top: -25%;
-        left: 5%;
+        /* left: 5%; */
         color: white;
     }
     .square {
@@ -475,7 +487,7 @@ body {
         width: 30px;
         height: 30px;
         top: 20%;
-        left: 35%;
+        /* left: 40%; */
         cursor: pointer;
         background-color: antiquewhite;
     }
@@ -485,14 +497,14 @@ body {
         height: 35px;
         border-radius: 50%;
         top: 35%;
-        left: 30%;
+        /* left: 40%; */
         cursor: pointer;
         background-color: antiquewhite;
     }
     .text {
         position: absolute;
         top: 45%;
-        left: 20%;
+        /* left: 35%; */
         cursor: pointer;
         color: antiquewhite;
     }
@@ -542,10 +554,12 @@ body {
       }
     .container1 {
         position: absolute;
-        width: 90%;
+        width: 85%;
         height: 100%;
         background-image: radial-gradient(white, skyblue);
-        right:0%;
+       left: 15%;
+        display: flex;
+        justify-content: center;
     }
     .controls {
         display: inline-block;
@@ -674,7 +688,7 @@ body {
     }
     .judul {
         position: absolute;
-        right: 90px;
+        /* right: 90px; */
         top: 145px;
     }
     
@@ -686,6 +700,8 @@ body {
         top: 0%;
         background-color: #0e68f8;
         left: 0%;
+        display: flex;
+        justify-content: center;
     }
     .wraper {
         position: absolute;
@@ -693,11 +709,13 @@ body {
         height: 500px;
         top: 50px;
         left: 0%;
+        display: flex;
+        justify-content: center;
         /* background-color: red; */
     }
     .input {
         position: absolute;
-        left: 5%;
+        /* left: 5%; */
         top: 10%;
         width: 90%;
         height: 30px;
@@ -715,7 +733,7 @@ body {
     }
     .save {
         position: absolute;
-        left: 5%;
+        /* left: 5%; */
         top: 60%;
         width: 90%;
         height: 30px;
@@ -736,7 +754,7 @@ body {
         width: 25px;
         height: 25px;
         top: 20%;
-        left: 25%;
+        /* left: 25%; */
         cursor: pointer;
         background-color: antiquewhite;
     }
@@ -746,14 +764,14 @@ body {
         height: 30px;
         border-radius: 50%;
         top: 35%;
-        left: 20%;
+        /* left: 20%; */
         cursor: pointer;
         background-color: antiquewhite;
     }
     .text {
         position: absolute;
         top: 45%;
-        left: 10%;
+        /* left: 10%; */
         cursor: pointer;
         color: antiquewhite;
     }
