--- a/user_fitur/style.css
+++ b/user_fitur/style.css
@@ -3374,12 +3374,19 @@ body {
 
 
 
-
-.contener_wraper .wraper_kaos{
+/* .contener_wraper .wraper_kaos{
     top: 0%;
     width: 100%;
     height: 55%;
     margin: 0 0 0px;
+  } */
+.contener_wraper .wraper_kaos{
+    top: -27%;
+    left: -50%;
+    width: 200%;
+    height: 110%;
+    margin: 0 0 0px;
+    transform: scale(0.5);
   }
   .wraper_kaos .contenerkaos {
     position: absolute;
