--- a/user_fitur/style.css
+++ b/user_fitur/style.css
@@ -3379,6 +3379,8 @@ body {
     width: 100%;
     height: 55%;
     margin: 0 0 0px;
+    display: flex;
+    justify-content: center;
   }
 /* .contener_wraper .wraper_kaos{
     top: -27%;
@@ -3390,8 +3392,13 @@ body {
   } */
   .wraper_kaos .contenerkaos {
     position: absolute;
-    height: 80%;
-    top: 0.5%;
+    width: 200%;
+    height: 160%;
+    top: -40%;
+    left: -50%;
+    transform: scale(0.5);
+    display: flex;
+    justify-content: center;
   }
   /*#overflow {
   width: 56%;
